# ForestTalk

./: .gitignore  AGENT.md  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: predict.py
backend/app/core/: config.py
backend/app/schemas/: prediction.py
backend/app/services/: deepforest_service.py
backend/app/utils/: image_utils.py
docs/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/types/: prediction.ts
scripts/: README.md
